replace uploadRef tags
